--- a/src/app/webviewer-main/header/toolbar/toolbar-users/users-dialog/users-dialog.component.css
+++ b/src/app/webviewer-main/header/toolbar/toolbar-users/users-dialog/users-dialog.component.css
@@ -189,7 +189,7 @@ th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:la
     background: #2B2B2B;
 }
 
-.mat-paginator-container.user_table_pagination {
+::ng-deep .mat-paginator-container {
     position: relative;
     bottom: 0px;
     display: flex;
