--- a/src/app/webviewer-main/study-table/study-table.component.css
+++ b/src/app/webviewer-main/study-table/study-table.component.css
@@ -133,7 +133,7 @@ table.mat-table {
 }
   
 
-/* ::ng-deep .mat-paginator-container {
+::ng-deep .mat-paginator-container {
     position: relative;
     bottom: 0px;
     display: flex;
@@ -146,7 +146,7 @@ table.mat-table {
     width: 100%;
     background: #2b2b2b;
     color: lightgray;
-} */
+}
 
 ::ng-deep .mat-paginator-range-label {
     font-size:13px ;
