--- a/src/app/webviewer-main/header/toolbar/toolbar-settings/toolbar-settings.component.css
+++ b/src/app/webviewer-main/header/toolbar/toolbar-settings/toolbar-settings.component.css
@@ -24,7 +24,7 @@
     line-height: 0.6rem;
 }
 
-.mat-dialog-container{
+::ng-deep .mat-dialog-container{
     background: #2B2B2B;
     padding: 0;
 }
