feat: connect img url with study

--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -37,7 +37,7 @@
         </ng-container>
         <ng-container matColumnDef="results">
             <th mat-header-cell *matHeaderCellDef id="results" mat-sort-header>Results</th>
-            <td mat-cell *matCellDef="let element">{{element.result}}</td>
+            <td mat-cell *matCellDef="let element">{{element.results}}</td>
         </ng-container>
         <ng-container matColumnDef="volumes">
             <th mat-header-cell *matHeaderCellDef id="volumes" mat-sort-header>Volumes</th>
