--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -75,6 +75,9 @@ img{
 .btn-container2{
     padding: 0 1.8rem 0.5rem 0;
 }
+.img-btn-container .blankbox {
+    height: 2.25vw;
+}
 
 .img-btn-container{
     display: flex;
