--- a/src/app/webviewer-main/report-image-list/report-image-list.component.html
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.html
@@ -19,13 +19,14 @@
 
 <ng-container>
     <div class="img-btn-container">
-        <div class="btn-container2" *ngIf="isAnalyzed">
+        <div class="btn-container2" *ngIf="hasReport">
             <button class="custom-btn" (click)="confirm()">
                 <i class="fa fa-check-circle" aria-hidden="true" style="color: green;"></i>&nbsp;Confirm
             </button>
         </div>
+        <div class="blankbox" *ngIf="!hasReport"></div>
         <div class="report_image2">
-            <img src="{{report_img | async}}" />
+            <img src="{{imgUrl$ | async}}" />
         </div>
     </div>
 </ng-container>
