--- a/src/app/webviewer-main/header/toolbar/toolbar-settings/settings-dialog/settings-dialog.component.html
+++ b/src/app/webviewer-main/header/toolbar/toolbar-settings/settings-dialog/settings-dialog.component.html
@@ -5,7 +5,7 @@
             <mat-icon class="close-icon">close</mat-icon>
         </button>
     </section>
-    <section class="settings" [ngIf]="userPermission === 'ADMINISTRATOR' || userPermission === 'DEVELOPER'">
+    <section class="settings">
         <form [formGroup]="receiveForm" (ngSubmit)="onSubmit_Re('receiveForm')">
             <div class="receive-group">
                 <h3 class="title">Receive</h3>
@@ -49,10 +49,6 @@
                 </div>
             </div> 
         </form>
-    </section>
-
-    <section class="udpate_userinfo" [ngIf]="userPermission === 'PHYSICIAN'">
-        <div>hello</div>
     </section>
 </div>
 
